# instagram-mcp

./: .gitignore  .openclaw-install.sh  Dockerfile  OPENCLAW.md  README.md  config.json  docker-compose.yml  pyproject.toml  requirements.txt
config/: openclaw.json
data/instagram-mcp/: config.json
instagram_mcp/: client.py  instagram_client.py  post_parser.py  server.py  tools.py  utils.py
skill/: SKILL.md  install.sh  mcp.json  mcporter-config.json  mcporter.json
tests/: test_list_tools.py  test_zen.py
