[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "instagram-mcp"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for accessing Instagram data"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["instagram", "mcp", "api", "scraping", "social-media"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0,<2.0.0",
    "zendriver>=0.5.0,<1.0.0",
    "noble-tls>=0.1.0",
    "beautifulsoup4>=4.12.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/instagram-mcp"
Repository = "https://github.com/yourusername/instagram-mcp.git"
Issues = "https://github.com/yourusername/instagram-mcp/issues"

[project.scripts]
instagram-mcp = "instagram_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["instagram_mcp"]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
